--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ts-lib-template",
+  "name": "discord-command-options",
   "version": "0.1.0",
-  "description": "Typescript library template",
+  "description": "Standalone type-safe application command option parser",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "git@github.com:ducktrshessami/ts-lib-template.git",
+  "repository": "git@github.com:ducktrshessami/discord-command-options.git",
   "author": "ducktrshessami",
   "license": "MIT",
   "scripts": {
@@ -15,9 +15,11 @@
     "require": "./dist/index.js",
     "import": "./dist/index.mjs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "discord-api-types": "^0.38.8"
+  },
   "devDependencies": {
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.2"
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3"
   }
 }
